Powerup activation boolean now set.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -47,7 +47,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.28-00.04.00
+CoopGame.TimeStamp=2020.04.28-14.25.50
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -3262,10 +3262,8 @@ RotatingMovementComponent.Cooking=True
 RotatingMovementComponent.Events=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Powerups/BP_SuperSpeedPowerup.BP_SuperSpeedPowerup
-OpenAssetsAtExit=/Game/Powerups/BP_HealthRegenerationPowerup.BP_HealthRegenerationPowerup
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -3542,9 +3540,9 @@ RecentlyPlaced=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail.P_SmokeTrail;
 RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Powerups/BP_SuperSpeedPowerup
-MRUItem1=/Game/Powerups/MI_HealthRegeneration
-MRUItem2=/Game/Powerups/BP_HealthRegenerationPowerup
+MRUItem0=/Game/Powerups/BP_HealthRegenerationPowerup
+MRUItem1=/Game/Powerups/BP_SuperSpeedPowerup
+MRUItem2=/Game/Powerups/MI_HealthRegeneration
 MRUItem3=/Game/Powerups/M_Powerup
 MRUItem4=/Game/Powerups/MI_PowerupSuperSpeed
 MRUItem5=/Game/Powerups/Meshes/SpeedIcon
