Created a blueprint base class for powerups. Powerup base and derivates should be moved to C++.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -47,7 +47,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.28-14.25.50
+CoopGame.TimeStamp=2020.04.28-14.34.15
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -3260,9 +3260,29 @@ RotatingMovementComponent.ComponentReplication=True
 RotatingMovementComponent.Activation=True
 RotatingMovementComponent.Cooking=True
 RotatingMovementComponent.Events=True
+BP_PowerupBase_C.Tick=True
+BP_PowerupBase_C.Default=True
+BP_PowerupBase_C.Powerup=True
+BP_PowerupBase_C.Rendering=True
+BP_PowerupBase_C.Replication=True
+BP_PowerupBase_C.Input=True
+BP_PowerupBase_C.Actor=True
+FloatProperty.Variable=True
+FloatProperty.DefaultValueCategory=True
+Blueprint.ClassOptions=True
+Blueprint.BlueprintOptions=True
+Blueprint.Interfaces=True
+Blueprint.Packaging=True
+Blueprint.Thumbnail=True
+ActorComponent.Tags=True
+ActorComponent.ComponentReplication=True
+ActorComponent.Variable=True
+ActorComponent.Cooking=True
+K2Node_CallParentFunction.Graph=True
+BP_SuperSpeedPowerup_C.TransformCommon=True
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [RootWindow]
@@ -3434,6 +3454,7 @@ BP_TrackerBot_C=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Renderi
 NavigationPath=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,
 CharacterMovementComponent=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,
 BP_SuperSpeedPowerup_C=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,BP_TrackerBot_C.Physics.ConstraintsGroup,BP_TrackerBot_C.Rendering.TextureStreaming,BP_TrackerBot_C.Rendering.LOD,
+BP_PowerupBase_C=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,BP_TrackerBot_C.Physics.ConstraintsGroup,BP_TrackerBot_C.Rendering.TextureStreaming,BP_TrackerBot_C.Rendering.LOD,
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[3]\" "
@@ -3457,7 +3478,7 @@ SkinnedMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.Bo
 MeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 PrimitiveComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 SceneComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
-ActorComponent=
+ActorComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 ParticleModuleColorOverLife="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
 ParticleModuleColorBase="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
 ParticleModule="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
@@ -3524,6 +3545,7 @@ MaterialEditorInstanceConstant="\"Object.ParameterGroups.ParameterGroups[0].Para
 
 [PlacementMode]
 RecentlyPlaced=/Game/Powerups/Pickup/BP_TestPickup.BP_TestPickup;
+RecentlyPlaced=/Game/Powerups/BP_SuperSpeedPowerup.BP_SuperSpeedPowerup;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
 RecentlyPlaced=/Game/Blueprints/AI/BP_TrackerBot.BP_TrackerBot;
@@ -3540,26 +3562,26 @@ RecentlyPlaced=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail.P_SmokeTrail;
 RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Powerups/BP_HealthRegenerationPowerup
-MRUItem1=/Game/Powerups/BP_SuperSpeedPowerup
-MRUItem2=/Game/Powerups/MI_HealthRegeneration
-MRUItem3=/Game/Powerups/M_Powerup
-MRUItem4=/Game/Powerups/MI_PowerupSuperSpeed
-MRUItem5=/Game/Powerups/Meshes/SpeedIcon
-MRUItem6=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
-MRUItem7=/Game/Blueprints/Weapons/BP_MachineGun
-MRUItem8=/Game/Powerups/M_PowerupLightFunction
-MRUItem9=/Game/Powerups/M_SuperSpeedPowerup
-MRUItem10=/Game/Powerups/Pickup/BP_TestPickup
-MRUItem11=/Game/Powerups/M_PowerupDecal
-MRUItem12=/Game/TrackerBot/M_TrackerBot2
-MRUItem13=/Game/TrackerBot/M_TrackerBot
-MRUItem14=/Game/TrackerBot/BP_TrackerBot
-MRUItem15=/Game/TrackerBot/SM_TrackerBot
-MRUItem16=/Game/TrackerBot/Sounds/ball_roll_04_loop_Cue
-MRUItem17=/Game/TrackerBot/Sounds/Explosion01_Cue
-MRUItem18=/Game/TrackerBot/Sounds/explodewarning_Cue
-MRUItem19=/Game/TrackerBot/Sounds/TrackerBotAttenuation
+MRUItem0=/Game/Powerups/BP_PowerupBase
+MRUItem1=/Game/Powerups/BP_HealthRegenerationPowerup
+MRUItem2=/Game/Powerups/BP_SuperSpeedPowerup
+MRUItem3=/Game/Powerups/MI_HealthRegeneration
+MRUItem4=/Game/Powerups/M_Powerup
+MRUItem5=/Game/Powerups/MI_PowerupSuperSpeed
+MRUItem6=/Game/Powerups/Meshes/SpeedIcon
+MRUItem7=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
+MRUItem8=/Game/Blueprints/Weapons/BP_MachineGun
+MRUItem9=/Game/Powerups/M_PowerupLightFunction
+MRUItem10=/Game/Powerups/M_SuperSpeedPowerup
+MRUItem11=/Game/Powerups/Pickup/BP_TestPickup
+MRUItem12=/Game/Powerups/M_PowerupDecal
+MRUItem13=/Game/TrackerBot/M_TrackerBot2
+MRUItem14=/Game/TrackerBot/M_TrackerBot
+MRUItem15=/Game/TrackerBot/BP_TrackerBot
+MRUItem16=/Game/TrackerBot/SM_TrackerBot
+MRUItem17=/Game/TrackerBot/Sounds/ball_roll_04_loop_Cue
+MRUItem18=/Game/TrackerBot/Sounds/Explosion01_Cue
+MRUItem19=/Game/TrackerBot/Sounds/explodewarning_Cue
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
