Added functionality found in blueprint to PowerupActor in C++.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -26,8 +26,6 @@ MultipleInstancePositions=(X=315,Y=163)
 MultipleInstancePositions=(X=0,Y=0)
 MultipleInstancePositions=(X=672,Y=0)
 MultipleInstancePositions=(X=0,Y=512)
-LastExecutedPlayModeType=PlayMode_InEditorFloating
-PlayNumberOfClients=2
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 SnapToSurface=(bEnabled=False,SnapOffsetExtent=0.000000,bSnapRotation=True)
@@ -3284,8 +3282,11 @@ K2Node_CallParentFunction.Graph=True
 BP_SuperSpeedPowerup_C.TransformCommon=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/Powerups/BP_SuperSpeedPowerup.BP_SuperSpeedPowerup
+OpenAssetsAtExit=/Game/Powerups/BP_HealthRegenerationPowerup.BP_HealthRegenerationPowerup
+OpenAssetsAtExit=/Game/Powerups/BP_PowerupBase.BP_PowerupBase
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -3480,7 +3481,7 @@ SkeletalMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.B
 SkinnedMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
 MeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 PrimitiveComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
-SceneComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+SceneComponent=
 ActorComponent=
 ParticleModuleColorOverLife="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
 ParticleModuleColorBase="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
@@ -3547,6 +3548,7 @@ REINST_BP_TestPickup_C_61="\"Object.Components.overlapSphere\" \"Object.Componen
 MaterialEditorInstanceConstant="\"Object.ParameterGroups.ParameterGroups[0].Parameters.Parameters[0].Object.ParameterValue\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/TrackerBot/BP_TrackerBot.BP_TrackerBot;
 RecentlyPlaced=/Game/Powerups/Pickup/BP_TestPickup.BP_TestPickup;
 RecentlyPlaced=/Game/Powerups/BP_SuperSpeedPowerup.BP_SuperSpeedPowerup;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
@@ -3565,9 +3567,9 @@ RecentlyPlaced=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail.P_SmokeTrail;
 RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Powerups/BP_SuperSpeedPowerup
+MRUItem0=/Game/Powerups/BP_PowerupBase
 MRUItem1=/Game/Powerups/BP_HealthRegenerationPowerup
-MRUItem2=/Game/Powerups/BP_PowerupBase
+MRUItem2=/Game/Powerups/BP_SuperSpeedPowerup
 MRUItem3=/Game/Powerups/MI_HealthRegeneration
 MRUItem4=/Game/Powerups/M_Powerup
 MRUItem5=/Game/Powerups/MI_PowerupSuperSpeed
@@ -3690,7 +3692,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=PIE
 
 [/Script/UnrealEd.CascadeOptions]
 ModuleColor_Beam_Unselected=(B=235,G=150,R=160,A=0)
