Corrected PowerupActor incorrect UFUNCTION uses. Implemented blueprint logic into the Health Regeneration and Super Speed powerups.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -47,8 +47,8 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.28-20.32.30
-CoopGame.LastCompileMethod=Runtime
+CoopGame.TimeStamp=2020.04.29-15.17.24
+CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
 RSA.TimeStamp=2019.12.20-23.26.56
@@ -3284,9 +3284,6 @@ BP_SuperSpeedPowerup_C.TransformCommon=True
 [AssetEditorManager]
 CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Powerups/BP_SuperSpeedPowerup.BP_SuperSpeedPowerup
-OpenAssetsAtExit=/Game/Powerups/BP_HealthRegenerationPowerup.BP_HealthRegenerationPowerup
-OpenAssetsAtExit=/Game/Powerups/BP_PowerupBase.BP_PowerupBase
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -3319,7 +3316,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Powerups
+ContentBrowserTab1.SelectedPaths=/Game/TrackerBot
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -3459,6 +3456,7 @@ CharacterMovementComponent=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPaw
 BP_SuperSpeedPowerup_C=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,BP_TrackerBot_C.Physics.ConstraintsGroup,BP_TrackerBot_C.Rendering.TextureStreaming,BP_TrackerBot_C.Rendering.LOD,
 BP_PowerupBase_C=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,BP_TrackerBot_C.Physics.ConstraintsGroup,BP_TrackerBot_C.Rendering.TextureStreaming,BP_TrackerBot_C.Rendering.LOD,
 BP_HealthRegenerationPowerup_C=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,BP_TrackerBot_C.Physics.ConstraintsGroup,BP_TrackerBot_C.Rendering.TextureStreaming,BP_TrackerBot_C.Rendering.LOD,
+StaticMeshComponent=StaticMeshComponent.Collision.Collision,
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[3]\" "
