--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -47,7 +47,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.29-15.17.24
+CoopGame.TimeStamp=2020.04.29-15.45.11
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -3280,6 +3280,36 @@ ActorComponent.Variable=True
 ActorComponent.Cooking=True
 K2Node_CallParentFunction.Graph=True
 BP_SuperSpeedPowerup_C.TransformCommon=True
+BP_PowerupActorBaseC_C.Tick=True
+BP_PowerupActorBaseC_C.Powerup=True
+BP_PowerupActorBaseC_C.Rendering=True
+BP_PowerupActorBaseC_C.Replication=True
+BP_PowerupActorBaseC_C.Input=True
+BP_PowerupActorBaseC_C.Actor=True
+BP_PowerupActorBaseC_C.Components=True
+BP_PowerupBase_C.Components=True
+REINST_BP_PowerupActorBaseC_C_42.Components=True
+REINST_BP_PowerupActorBaseC_C_46.Components=True
+BP_PowerupActorBaseC_C.SPowerupActor=True
+BP_PowerupActorBaseC_C.TransformCommon=True
+BP_PowerupActorBaseC_C.StaticMesh=True
+BP_PowerupActorBaseC_C.ComponentTick=True
+BP_PowerupActorBaseC_C.Physics=True
+BP_PowerupActorBaseC_C.Collision=True
+BP_PowerupActorBaseC_C.Lighting=True
+BP_PowerupActorBaseC_C.Tags=True
+BP_PowerupActorBaseC_C.ComponentReplication=True
+BP_PowerupActorBaseC_C.Variable=True
+BP_PowerupActorBaseC_C.Cooking=True
+BP_PowerupActorBaseC_C.RotatingComponent=True
+BP_PowerupActorBaseC_C.PlanarMovement=True
+BP_PowerupActorBaseC_C.MovementComponent=True
+BP_PowerupActorBaseC_C.Activation=True
+BP_PowerupActorBaseC_C.Sockets=True
+BP_PowerupActorBaseC_C.Events=True
+NewBlueprint_C.Tick=True
+NewBlueprint_C.Powerup=True
+NewBlueprint_C.Components=True
 
 [AssetEditorManager]
 CleanShutdown=False
@@ -3316,7 +3346,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/TrackerBot
+ContentBrowserTab1.SelectedPaths=/Game/Powerups/c++
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -3544,6 +3574,11 @@ REINST_BP_TestPickup_C_45="\"Object.Components.overlapSphere\" \"Object.Componen
 REINST_BP_TestPickup_C_49="\"Object.Components.overlapSphere\" \"Object.Components.overlapSphere.Object.Shape\" \"Object.Components.overlapSphere.Object.Shape.ShapeColor\" \"Object.Components.overlapSphere.Object.Collision\" \"Object.Components.decalComp\" \"Object.Components.decalComp.Object.Decal\" "
 REINST_BP_TestPickup_C_61="\"Object.Components.overlapSphere\" \"Object.Components.overlapSphere.Object.Shape\" \"Object.Components.overlapSphere.Object.Shape.ShapeColor\" \"Object.Components.overlapSphere.Object.Collision\" \"Object.Components.decalComp\" \"Object.Components.decalComp.Object.Decal\" "
 MaterialEditorInstanceConstant="\"Object.ParameterGroups.ParameterGroups[0].Parameters.Parameters[0].Object.ParameterValue\" "
+BP_PowerupActorBaseC_C=
+SPowerupActor=
+BP_PowerupBase_C="\"Object.Components.mesh\" \"Object.Components.mesh.Object.StaticMesh\" \"Object.Components.mesh.Object.Rendering\" \"Object.Components.mesh.Object.Lighting\" \"Object.Components.pointLight\" "
+REINST_BP_PowerupActorBaseC_C_42="\"Object.Components.mesh\" \"Object.Components.mesh.Object.StaticMesh\" \"Object.Components.mesh.Object.Rendering\" \"Object.Components.mesh.Object.Lighting\" \"Object.Components.pointLight\" \"Object.Components.pointLight.Object.Light\" \"Object.Components.pointLight.Object.LightFunction\" "
+REINST_BP_PowerupActorBaseC_C_46="\"Object.Components.mesh\" \"Object.Components.mesh.Object.StaticMesh\" \"Object.Components.mesh.Object.Rendering\" \"Object.Components.mesh.Object.Lighting\" \"Object.Components.pointLight\" \"Object.Components.rotationComponent\" \"Object.Components.rotationComponent.Object.RotatingComponent\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/TrackerBot/BP_TrackerBot.BP_TrackerBot;
@@ -3565,26 +3600,26 @@ RecentlyPlaced=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail.P_SmokeTrail;
 RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Powerups/BP_PowerupBase
-MRUItem1=/Game/Powerups/BP_HealthRegenerationPowerup
-MRUItem2=/Game/Powerups/BP_SuperSpeedPowerup
-MRUItem3=/Game/Powerups/MI_HealthRegeneration
-MRUItem4=/Game/Powerups/M_Powerup
-MRUItem5=/Game/Powerups/MI_PowerupSuperSpeed
-MRUItem6=/Game/Powerups/Meshes/SpeedIcon
-MRUItem7=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
-MRUItem8=/Game/Blueprints/Weapons/BP_MachineGun
-MRUItem9=/Game/Powerups/M_PowerupLightFunction
-MRUItem10=/Game/Powerups/M_SuperSpeedPowerup
-MRUItem11=/Game/Powerups/Pickup/BP_TestPickup
-MRUItem12=/Game/Powerups/M_PowerupDecal
-MRUItem13=/Game/TrackerBot/M_TrackerBot2
-MRUItem14=/Game/TrackerBot/M_TrackerBot
-MRUItem15=/Game/TrackerBot/BP_TrackerBot
-MRUItem16=/Game/TrackerBot/SM_TrackerBot
-MRUItem17=/Game/TrackerBot/Sounds/ball_roll_04_loop_Cue
-MRUItem18=/Game/TrackerBot/Sounds/Explosion01_Cue
-MRUItem19=/Game/TrackerBot/Sounds/explodewarning_Cue
+MRUItem0=/Game/Powerups/c++/NewBlueprint
+MRUItem1=/Game/Powerups/c++/BP_PowerupActorBaseC
+MRUItem2=/Game/Powerups/BP_PowerupBase
+MRUItem3=/Game/Powerups/BP_HealthRegenerationPowerup
+MRUItem4=/Game/Powerups/BP_SuperSpeedPowerup
+MRUItem5=/Game/Powerups/MI_HealthRegeneration
+MRUItem6=/Game/Powerups/M_Powerup
+MRUItem7=/Game/Powerups/MI_PowerupSuperSpeed
+MRUItem8=/Game/Powerups/Meshes/SpeedIcon
+MRUItem9=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
+MRUItem10=/Game/Blueprints/Weapons/BP_MachineGun
+MRUItem11=/Game/Powerups/M_PowerupLightFunction
+MRUItem12=/Game/Powerups/M_SuperSpeedPowerup
+MRUItem13=/Game/Powerups/Pickup/BP_TestPickup
+MRUItem14=/Game/Powerups/M_PowerupDecal
+MRUItem15=/Game/TrackerBot/M_TrackerBot2
+MRUItem16=/Game/TrackerBot/M_TrackerBot
+MRUItem17=/Game/TrackerBot/BP_TrackerBot
+MRUItem18=/Game/TrackerBot/SM_TrackerBot
+MRUItem19=/Game/TrackerBot/Sounds/ball_roll_04_loop_Cue
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
@@ -3649,6 +3684,7 @@ MRUItem19=/Game/TrackerBot/Sounds/explodewarning_Cue
 /Game/Powerups/M_Powerup.M_Powerup=0
 /Game/Powerups/MI_HealthRegeneration.MI_HealthRegeneration=0
 /Game/Powerups/BP_HealthRegenerationPowerup.BP_HealthRegenerationPowerup=0
+/Game/Powerups/BP_PowerupBase.BP_PowerupBase=0
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
