Health Regeneration and SuperSpeed powerups implemented correctly from C++. Mesh initial locations of each should be fixed.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -26,6 +26,8 @@ MultipleInstancePositions=(X=315,Y=163)
 MultipleInstancePositions=(X=0,Y=0)
 MultipleInstancePositions=(X=672,Y=0)
 MultipleInstancePositions=(X=0,Y=512)
+LastExecutedPlayModeType=PlayMode_InEditorFloating
+PlayNumberOfClients=2
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 SnapToSurface=(bEnabled=False,SnapOffsetExtent=0.000000,bSnapRotation=True)
@@ -3565,6 +3567,20 @@ REINST_BP_HealthRegenerationPowerup2_C_83.Rendering=True
 REINST_BP_HealthRegenerationPowerup2_C_83.Replication=True
 REINST_BP_HealthRegenerationPowerup2_C_83.Input=True
 REINST_BP_HealthRegenerationPowerup2_C_83.Actor=True
+REINST_BP_HealthRegenerationPowerup_C_87.Tick=True
+REINST_BP_HealthRegenerationPowerup_C_87.None=True
+REINST_BP_HealthRegenerationPowerup_C_87.Powerup=True
+REINST_BP_HealthRegenerationPowerup_C_87.Rendering=True
+REINST_BP_HealthRegenerationPowerup_C_87.Replication=True
+REINST_BP_HealthRegenerationPowerup_C_87.Input=True
+REINST_BP_HealthRegenerationPowerup_C_87.Actor=True
+REINST_BP_HealthRegenerationPowerup2_C_91.Tick=True
+REINST_BP_HealthRegenerationPowerup2_C_91.Powerup Effect=True
+REINST_BP_HealthRegenerationPowerup2_C_91.Powerup=True
+REINST_BP_HealthRegenerationPowerup2_C_91.Rendering=True
+REINST_BP_HealthRegenerationPowerup2_C_91.Replication=True
+REINST_BP_HealthRegenerationPowerup2_C_91.Input=True
+REINST_BP_HealthRegenerationPowerup2_C_91.Actor=True
 
 [AssetEditorManager]
 CleanShutdown=False
@@ -3854,6 +3870,7 @@ REINST_BP_SuperSpeedPowerup2_C_67="\"Object.Components.mesh\" \"Object.Component
 REINST_BP_HealthRegenerationPowerup2_C_71="\"Object.Components.mesh\" \"Object.Components.mesh.Object.StaticMesh\" \"Object.Components.mesh.Object.Rendering\" \"Object.Components.mesh.Object.Lighting\" \"Object.Components.pointLight\" \"Object.Components.pointLight.Object.Light.LightColor\" "
 REINST_BP_SuperSpeedPowerup2_C_79="\"Object.Components.mesh\" \"Object.Components.mesh.Object.StaticMesh\" \"Object.Components.mesh.Object.Rendering\" \"Object.Components.mesh.Object.Lighting\" \"Object.Components.pointLight\" \"Object.Components.pointLight.Object.Light.LightColor\" "
 REINST_BP_HealthRegenerationPowerup2_C_83="\"Object.Components.mesh\" \"Object.Components.mesh.Object.StaticMesh\" \"Object.Components.mesh.Object.Rendering\" \"Object.Components.mesh.Object.Lighting\" \"Object.Components.pointLight\" \"Object.Components.pointLight.Object.Light.LightColor\" "
+REINST_BP_HealthRegenerationPowerup2_C_91="\"Object.Components.mesh\" \"Object.Components.mesh.Object.StaticMesh\" \"Object.Components.mesh.Object.Rendering\" \"Object.Components.mesh.Object.Lighting\" \"Object.Components.pointLight\" \"Object.Components.pointLight.Object.Light.LightColor\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/TrackerBot/BP_TrackerBot.BP_TrackerBot;
