Fixed pickup actor upropertiy's specifiers.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -49,7 +49,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.29-16.36.52
+CoopGame.TimeStamp=2020.04.29-18.34.56
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -3581,10 +3581,47 @@ REINST_BP_HealthRegenerationPowerup2_C_91.Rendering=True
 REINST_BP_HealthRegenerationPowerup2_C_91.Replication=True
 REINST_BP_HealthRegenerationPowerup2_C_91.Input=True
 REINST_BP_HealthRegenerationPowerup2_C_91.Actor=True
+BP_HealthRegenerationPowerup_C.Variable=True
+BP_HealthRegenerationPowerup_C.TransformCommon=True
+BP_HealthRegenerationPowerup_C.Sockets=True
+BP_HealthRegenerationPowerup_C.Light=True
+BP_HealthRegenerationPowerup_C.Lightmass=True
+BP_HealthRegenerationPowerup_C.Performance=True
+BP_HealthRegenerationPowerup_C.LightFunction=True
+BP_HealthRegenerationPowerup_C.DistanceFieldShadows=True
+BP_HealthRegenerationPowerup_C.Light Profiles=True
+BP_HealthRegenerationPowerup_C.RayTracing=True
+BP_HealthRegenerationPowerup_C.Tags=True
+BP_HealthRegenerationPowerup_C.ComponentReplication=True
+BP_HealthRegenerationPowerup_C.Cooking=True
+BP_HealthRegenerationPowerup_C.Events=True
+BP_HealthRegenerationPowerup_C.StaticMesh=True
+BP_HealthRegenerationPowerup_C.Physics=True
+BP_HealthRegenerationPowerup_C.Collision=True
+BP_HealthRegenerationPowerup_C.Lighting=True
+bppow_C.Tick=True
+bppow_C.Powerup=True
+bppow_C.Rendering=True
+bppow_C.Replication=True
+bppow_C.Input=True
+bppow_C.Actor=True
+bppow_C.Variable=True
+bppow_C.TransformCommon=True
+bppow_C.Sockets=True
+bppow_C.StaticMesh=True
+bppow_C.Physics=True
+bppow_C.Collision=True
+bppow_C.Lighting=True
+bppow_C.Tags=True
+bppow_C.ComponentReplication=True
+bppow_C.Cooking=True
+bppow_C.Events=True
+bppow_C.Materials=True
 
 [AssetEditorManager]
 CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/Powerups/Pickup/BP_TestPickup.BP_TestPickup
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -3778,10 +3815,10 @@ PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 SkeletalMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
 SkinnedMeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
-MeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
-PrimitiveComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
-SceneComponent=
-ActorComponent=
+MeshComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
+PrimitiveComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
+SceneComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
+ActorComponent="\"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" "
 ParticleModuleColorOverLife="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
 ParticleModuleColorBase="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
 ParticleModule="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
@@ -3871,6 +3908,7 @@ REINST_BP_HealthRegenerationPowerup2_C_71="\"Object.Components.mesh\" \"Object.C
 REINST_BP_SuperSpeedPowerup2_C_79="\"Object.Components.mesh\" \"Object.Components.mesh.Object.StaticMesh\" \"Object.Components.mesh.Object.Rendering\" \"Object.Components.mesh.Object.Lighting\" \"Object.Components.pointLight\" \"Object.Components.pointLight.Object.Light.LightColor\" "
 REINST_BP_HealthRegenerationPowerup2_C_83="\"Object.Components.mesh\" \"Object.Components.mesh.Object.StaticMesh\" \"Object.Components.mesh.Object.Rendering\" \"Object.Components.mesh.Object.Lighting\" \"Object.Components.pointLight\" \"Object.Components.pointLight.Object.Light.LightColor\" "
 REINST_BP_HealthRegenerationPowerup2_C_91="\"Object.Components.mesh\" \"Object.Components.mesh.Object.StaticMesh\" \"Object.Components.mesh.Object.Rendering\" \"Object.Components.mesh.Object.Lighting\" \"Object.Components.pointLight\" \"Object.Components.pointLight.Object.Light.LightColor\" "
+bppow_C="\"Object.Components.mesh\" \"Object.Components.mesh.Object.StaticMesh\" \"Object.Components.mesh.Object.Rendering\" \"Object.Components.mesh.Object.Lighting\" \"Object.Components.pointLight\" \"Object.Components.pointLight.Object.Light.LightColor\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/TrackerBot/BP_TrackerBot.BP_TrackerBot;
@@ -3892,26 +3930,26 @@ RecentlyPlaced=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail.P_SmokeTrail;
 RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Powerups/BP_HealthRegenerationPowerup
-MRUItem1=/Game/Powerups/c++/BP_HealthRegenerationPowerup2
-MRUItem2=/Game/Powerups/BP_SuperSpeedPowerup
-MRUItem3=/Game/Powerups/c++/NewBlueprint
-MRUItem4=/Game/Powerups/c++/NewBlueprint1
-MRUItem5=/Game/Powerups/c++/BP_SuperSpeedPowerup2
-MRUItem6=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
-MRUItem7=/Game/Powerups/BP_PowerupBase
-MRUItem8=/Game/Powerups/c++/BP_PowerupActorBaseC
-MRUItem9=/Game/Powerups/MI_HealthRegeneration
-MRUItem10=/Game/Powerups/M_Powerup
-MRUItem11=/Game/Powerups/MI_PowerupSuperSpeed
-MRUItem12=/Game/Powerups/Meshes/SpeedIcon
-MRUItem13=/Game/Blueprints/Weapons/BP_MachineGun
-MRUItem14=/Game/Powerups/M_PowerupLightFunction
-MRUItem15=/Game/Powerups/M_SuperSpeedPowerup
-MRUItem16=/Game/Powerups/Pickup/BP_TestPickup
-MRUItem17=/Game/Powerups/M_PowerupDecal
-MRUItem18=/Game/TrackerBot/M_TrackerBot2
-MRUItem19=/Game/TrackerBot/M_TrackerBot
+MRUItem0=/Game/Powerups/Pickup/BP_TestPickup
+MRUItem1=/Game/Powerups/c++/bppow
+MRUItem2=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem3=/Game/Blueprints/Characters/BP_TargetDummy
+MRUItem4=/Game/TrackerBot/BP_TrackerBot
+MRUItem5=/Game/Powerups/BP_PowerupBase
+MRUItem6=/Game/Powerups/BP_HealthRegenerationPowerup
+MRUItem7=/Game/Powerups/c++/BP_HealthRegenerationPowerup2
+MRUItem8=/Game/Powerups/BP_SuperSpeedPowerup
+MRUItem9=/Game/Powerups/c++/NewBlueprint
+MRUItem10=/Game/Powerups/c++/NewBlueprint1
+MRUItem11=/Game/Powerups/c++/BP_SuperSpeedPowerup2
+MRUItem12=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
+MRUItem13=/Game/Powerups/c++/BP_PowerupActorBaseC
+MRUItem14=/Game/Powerups/MI_HealthRegeneration
+MRUItem15=/Game/Powerups/M_Powerup
+MRUItem16=/Game/Powerups/MI_PowerupSuperSpeed
+MRUItem17=/Game/Powerups/Meshes/SpeedIcon
+MRUItem18=/Game/Blueprints/Weapons/BP_MachineGun
+MRUItem19=/Game/Powerups/M_PowerupLightFunction
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
@@ -3979,6 +4017,7 @@ MRUItem19=/Game/TrackerBot/M_TrackerBot
 /Game/Powerups/BP_PowerupBase.BP_PowerupBase=0
 /Game/Powerups/c++/NewBlueprint.NewBlueprint=0
 /Game/Powerups/c++/BP_SuperSpeedPowerup2.BP_SuperSpeedPowerup2=0
+/Game/Blueprints/Characters/BP_TargetDummy.BP_TargetDummy=0
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
