Added a location to spawn the pickup object, inside the pickup actor class.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -49,7 +49,7 @@ CameraSpeed=3
 LastLevel=/Game/maps/VoidMap
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.04.29-18.34.56
+CoopGame.TimeStamp=2020.04.29-19.00.40
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -3617,11 +3617,60 @@ bppow_C.ComponentReplication=True
 bppow_C.Cooking=True
 bppow_C.Events=True
 bppow_C.Materials=True
+BP_TestPickup_C.Shape=True
+BP_TestPickup_C.Navigation=True
+BP_TestPickup_C.ComponentTick=True
+BP_TestPickup_C.Physics=True
+BP_TestPickup_C.Collision=True
+BP_TestPickup_C.Tags=True
+BP_TestPickup_C.ComponentReplication=True
+BP_TestPickup_C.Variable=True
+BP_TestPickup_C.Cooking=True
+BP_TestPickup_C.Decal=True
+BP_TestPickup_C.Sockets=True
+BP_TestPickup_C.Events=True
+bppower_C.Tick=True
+bppower_C.Powerup=True
+bppower_C.Rendering=True
+bppower_C.Replication=True
+bppower_C.Input=True
+bppower_C.Actor=True
+bppower_C.Variable=True
+bppower_C.TransformCommon=True
+bppower_C.Sockets=True
+bppower_C.StaticMesh=True
+bppower_C.Physics=True
+bppower_C.Collision=True
+bppower_C.Lighting=True
+bppower_C.Tags=True
+bppower_C.ComponentReplication=True
+bppower_C.Cooking=True
+bppower_C.Events=True
+bpwoe_C.Tick=True
+bpwoe_C.Powerup=True
+bpwoe_C.Rendering=True
+bpwoe_C.Replication=True
+bpwoe_C.Input=True
+bpwoe_C.Actor=True
+bpwoe_C.Components=True
+bpwoe_C.Variable=True
+bpwoe_C.TransformCommon=True
+bpwoe_C.Sockets=True
+bpwoe_C.Light=True
+bpwoe_C.Lightmass=True
+bpwoe_C.Performance=True
+bpwoe_C.LightFunction=True
+bpwoe_C.DistanceFieldShadows=True
+bpwoe_C.Light Profiles=True
+bpwoe_C.RayTracing=True
+bpwoe_C.Tags=True
+bpwoe_C.ComponentReplication=True
+bpwoe_C.Cooking=True
+bpwoe_C.Events=True
 
 [AssetEditorManager]
 CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Powerups/Pickup/BP_TestPickup.BP_TestPickup
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -3875,8 +3924,8 @@ REINST_BP_TrackerBot_C_53="\"Object.Components.meshComp.Object.Lighting.Lightmas
 REINST_BP_TrackerBot_C_35="\"Object.Components.meshComp.Object.Lighting.LightmassSettings\" \"Object.Components.meshComp.Object.Lighting.LightingChannels\" \"Object.Components.meshComp.Object.Collision.BodyInstance\" "
 MaterialExpressionScalarParameter="\"Object.DefaultValue\" "
 REINST_BP_ExplosiveBarrel_C_47="\"Object.Components.mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-BP_TestPickup_C=
-SPickupActor=
+BP_TestPickup_C="\"Object.Components.decalComp\" "
+SPickupActor="\"Object.Components.decalComp\" "
 REINST_BP_TestPickup_C_37="\"Object.Components.decalComp\" \"Object.Components.decalComp.Object.Decal\" "
 REINST_BP_TestPickup_C_45="\"Object.Components.overlapSphere\" \"Object.Components.overlapSphere.Object.Shape\" \"Object.Components.overlapSphere.Object.Shape.ShapeColor\" \"Object.Components.overlapSphere.Object.Collision\" \"Object.Components.decalComp\" \"Object.Components.decalComp.Object.Decal\" "
 REINST_BP_TestPickup_C_49="\"Object.Components.overlapSphere\" \"Object.Components.overlapSphere.Object.Shape\" \"Object.Components.overlapSphere.Object.Shape.ShapeColor\" \"Object.Components.overlapSphere.Object.Collision\" \"Object.Components.decalComp\" \"Object.Components.decalComp.Object.Decal\" "
@@ -3909,6 +3958,8 @@ REINST_BP_SuperSpeedPowerup2_C_79="\"Object.Components.mesh\" \"Object.Component
 REINST_BP_HealthRegenerationPowerup2_C_83="\"Object.Components.mesh\" \"Object.Components.mesh.Object.StaticMesh\" \"Object.Components.mesh.Object.Rendering\" \"Object.Components.mesh.Object.Lighting\" \"Object.Components.pointLight\" \"Object.Components.pointLight.Object.Light.LightColor\" "
 REINST_BP_HealthRegenerationPowerup2_C_91="\"Object.Components.mesh\" \"Object.Components.mesh.Object.StaticMesh\" \"Object.Components.mesh.Object.Rendering\" \"Object.Components.mesh.Object.Lighting\" \"Object.Components.pointLight\" \"Object.Components.pointLight.Object.Light.LightColor\" "
 bppow_C="\"Object.Components.mesh\" \"Object.Components.mesh.Object.StaticMesh\" \"Object.Components.mesh.Object.Rendering\" \"Object.Components.mesh.Object.Lighting\" \"Object.Components.pointLight\" \"Object.Components.pointLight.Object.Light.LightColor\" "
+bppower_C="\"Object.Components.mesh\" \"Object.Components.mesh.Object.StaticMesh\" \"Object.Components.mesh.Object.Rendering\" \"Object.Components.mesh.Object.Lighting\" \"Object.Components.pointLight\" \"Object.Components.pointLight.Object.Light.LightColor\" "
+bpwoe_C="\"Object.Components.mesh\" \"Object.Components.mesh.Object.StaticMesh\" \"Object.Components.mesh.Object.Rendering\" \"Object.Components.mesh.Object.Lighting\" \"Object.Components.pointLight\" \"Object.Components.pointLight.Object.Light.LightColor\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/TrackerBot/BP_TrackerBot.BP_TrackerBot;
@@ -3930,26 +3981,26 @@ RecentlyPlaced=/Game/Weapons/Effects/BasicTracer/P_SmokeTrail.P_SmokeTrail;
 RecentlyPlaced=/Game/Blueprints/BP_TargetDummy.BP_TargetDummy;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Powerups/Pickup/BP_TestPickup
-MRUItem1=/Game/Powerups/c++/bppow
-MRUItem2=/Game/Blueprints/Characters/BP_PlayerPawn
-MRUItem3=/Game/Blueprints/Characters/BP_TargetDummy
-MRUItem4=/Game/TrackerBot/BP_TrackerBot
-MRUItem5=/Game/Powerups/BP_PowerupBase
-MRUItem6=/Game/Powerups/BP_HealthRegenerationPowerup
-MRUItem7=/Game/Powerups/c++/BP_HealthRegenerationPowerup2
-MRUItem8=/Game/Powerups/BP_SuperSpeedPowerup
-MRUItem9=/Game/Powerups/c++/NewBlueprint
-MRUItem10=/Game/Powerups/c++/NewBlueprint1
-MRUItem11=/Game/Powerups/c++/BP_SuperSpeedPowerup2
-MRUItem12=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
-MRUItem13=/Game/Powerups/c++/BP_PowerupActorBaseC
-MRUItem14=/Game/Powerups/MI_HealthRegeneration
-MRUItem15=/Game/Powerups/M_Powerup
-MRUItem16=/Game/Powerups/MI_PowerupSuperSpeed
-MRUItem17=/Game/Powerups/Meshes/SpeedIcon
-MRUItem18=/Game/Blueprints/Weapons/BP_MachineGun
-MRUItem19=/Game/Powerups/M_PowerupLightFunction
+MRUItem0=/Game/Powerups/c++/NewBlueprint
+MRUItem1=/Game/Powerups/c++/bpwoe
+MRUItem2=/Game/Powerups/c++/bppower
+MRUItem3=/Game/Powerups/Pickup/BP_TestPickup
+MRUItem4=/Game/Powerups/c++/bppow
+MRUItem5=/Game/Blueprints/Characters/BP_PlayerPawn
+MRUItem6=/Game/Blueprints/Characters/BP_TargetDummy
+MRUItem7=/Game/TrackerBot/BP_TrackerBot
+MRUItem8=/Game/Powerups/BP_PowerupBase
+MRUItem9=/Game/Powerups/BP_HealthRegenerationPowerup
+MRUItem10=/Game/Powerups/c++/BP_HealthRegenerationPowerup2
+MRUItem11=/Game/Powerups/BP_SuperSpeedPowerup
+MRUItem12=/Game/Powerups/c++/NewBlueprint1
+MRUItem13=/Game/Powerups/c++/BP_SuperSpeedPowerup2
+MRUItem14=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel
+MRUItem15=/Game/Powerups/c++/BP_PowerupActorBaseC
+MRUItem16=/Game/Powerups/MI_HealthRegeneration
+MRUItem17=/Game/Powerups/M_Powerup
+MRUItem18=/Game/Powerups/MI_PowerupSuperSpeed
+MRUItem19=/Game/Powerups/Meshes/SpeedIcon
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
